Development Portal (2024-03-04 shi)
==============================
Update all 'project/s' to 'activity/ies'


Development Portal (2024-03-07 shi)
==============================
Add mention links for publisher and participating-org #661
Update all translation pages
Update transaction overview css for SAVi


Development Portal (2024-01-23 shi)
==============================
Update Contact Publisher link
Update footer displaying contact publisher link
Fix narrative to display for recipients in org files
Update @ref links to publisher or participating-org


Development Portal (2024-01-19 shi)
==============================
Update link text for Publisher contact
Update all translation pages


Development Portal (2023-07-27 shi)
==============================
Update BETA status
Update print-friendly css for beta badge
Add d-preview link to footer
Minor css fixes


Development Portal (2023-06-21 shi)
==============================
Remove period-percent check for SAVi


Development Portal (2023-03-20 shi)
==============================
Display narratives for tag element of non-embedded codelist if found


Development Portal (2022-03-23 shi)
==============================
Display all narratives for result comments in SAVi
Display all narratives for transaction columns in SAVi
Display all narratives for owner-org in SAVi
Display all narratives for contact-info in SAVi
Display all narratives for Organisation name in SAVi
Update css for new narratives
Update print-friendly theme for SAVi
Minor css fixes


Development Portal (2022-03-22 shi)
==============================
Update Freetext glossary in search
Update view_search glossary chunk now in general
Display all narratives for result titles & indicator descriptions
Fix result comments to only show when available
Fix result percent dot background color when @percent is 0
Update print-friendly theme for SAVi


Development Portal (2022-03-10 shi)
==============================
Update search input font size

