@@ -259,6 +259,9 @@ IATI出版社
 #list_ended_text
 最近刚刚结束的项目
 
+#list_participating_org_text
+参与组织
+
 #list_ended_declare_text
 降
 
@@ -300,6 +303,21 @@ IATI出版社
 
 #amount_text
 总和
+
+#narrative_text
+叙述
+
+#reported_text
+报道者
+
+#role_text
+角色
+
+#type_text
+类型
+
+#activities_text
+活动
 
 #view_activities_amount_text
 总和
