@@ -262,6 +262,9 @@ Recent first
 #list_ended_text
 Ended activities
 
+#list_participating_org_text
+Participating Org
+
 #list_ended_declare_text
 Recent first
 
@@ -303,6 +306,21 @@ End date
 
 #amount_text
 Amount
+
+#narrative_text
+Narrative
+
+#reported_text
+Reported by
+
+#role_text
+Role
+
+#type_text
+Type
+
+#activities_text
+Activities
 
 #view_activities_amount_text
 Total commitment and % used
