@@ -259,6 +259,9 @@ Plus récent en premier
 #list_ended_text 
 Projets terminés récemment 
 
+#list_participating_org_text
+Organisation participante
+
 #list_ended_declare_text 
 Descendant
 
@@ -300,6 +303,21 @@ Date de fin
 
 #amount_text
 Somme
+
+#narrative_text
+Narratif
+
+#reported_text
+Rapporté par
+
+#role_text
+Rôle
+
+#type_text
+Taper
+
+#activities_text
+Activités
 
 #view_activities_amount_text
 Engagements sortants
