@@ -259,6 +259,9 @@ IATI रजिस्ट्री से डेटा {today}
 #list_ended_text 
 हाल ही में समाप्त परियोजनाओं 
 
+#list_participating_org_text
+भाग लेने वाला संगठन
+
 #list_ended_declare_text 
 अवरोही
 
@@ -300,6 +303,21 @@ IATI रजिस्ट्री से डेटा {today}
 
 #amount_text
 राशि
+
+#narrative_text
+आख्यान
+
+#reported_text
+के द्वारा रिपोर्ट किया गया
+
+#role_text
+भूमिका
+
+#type_text
+प्रकार
+
+#activities_text
+गतिविधियाँ
 
 #view_activities_amount_text
 राशि
