@@ -259,6 +259,9 @@ IATI レジストリからのデータ {today}
 #list_ended_text
 最近終わったプロジェクト 
 
+#list_participating_org_text
+参加組織
+
 #list_ended_declare_text
 下行
 
@@ -300,6 +303,21 @@ IATI レジストリからのデータ {today}
 
 #amount_text
 合計
+
+#narrative_text
+物語
+
+#reported_text
+報告者
+
+#role_text
+役割
+
+#type_text
+タイプ
+
+#activities_text
+活動内容
 
 #view_activities_amount_text
 合計
