@@ -259,6 +259,9 @@ Más recientes
 #list_ended_text 
 Proyectos recientemente terminados 
 
+#list_participating_org_text
+Organización participante
+
 #list_ended_declare_text 
 Descendiente
 
@@ -300,6 +303,21 @@ Fecha de finalización
 
 #amount_text
 Cantidad
+
+#narrative_text
+Narrativo
+
+#reported_text
+Reportado por
+
+#role_text
+Role
+
+#type_text
+Tipo
+
+#activities_text
+Actividades
 
 #view_activities_amount_text
 Compromisos salientes
