@@ -1,6 +1,8 @@
-Development Portal (2024-03-04 shi)
+Development Portal (2024-04-03 shi)
 ==============================
 Update all 'project/s' to 'activity/ies'
+Add participating-org section to main page
+Update all translation pages
 
 
 Development Portal (2024-03-07 shi)
